# src/router.js
@@ -15,6 +15,7 @@ router.get('/api/v1/books/author/:id', book.getByAuthor);
 router.get('/api/v1/books/rating/:rating', book.getByRating);
 
 router.post('/api/v1/users', user.create);
+router.post('/api/v1/login', user.login);
 
 router.get('/', (req, res) => res.send('Hello World!'));
 
